legacy/cluster/dashboard/ingress-alert.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alert
  annotations:
    external-dns.alpha.kubernetes.io/target: luma.chrismiller.xyz
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - alert.luma.chrismiller.xyz
      secretName: alert-luma-tls
  rules:
    - host: alert.luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager-operated
                port:
                  number: 9093
